[gd_scene load_steps=6 format=3 uid="uid://ddn5dflpnvmfn"]

[ext_resource type="Script" uid="uid://c6v4td75pemi0" path="res://Main Menu/main_menu.gd" id="1_col8w"]
[ext_resource type="PackedScene" uid="uid://btf8e0wnlbd82" path="res://Player/player.tscn" id="2_5ms5j"]
[ext_resource type="PackedScene" uid="uid://b31r5kemx5nnp" path="res://Main Menu/Stat Option.tscn" id="2_i0jnm"]

[sub_resource type="Gradient" id="Gradient_i0jnm"]
offsets = PackedFloat32Array(0.9375, 0.988971, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wlfof"]
gradient = SubResource("Gradient_i0jnm")
width = 160
height = 160
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="MainMenu" type="Node2D" groups=["Main Menu"]]
script = ExtResource("1_col8w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Multiplayer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Multiplayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Multiplayer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Dungeon Strikers"

[node name="Character Select" type="HBoxContainer" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="DisplayName" type="LineEdit" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/VBoxContainer" groups=["DisplayName"]]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 14
placeholder_text = "Enter Name"
alignment = 1
max_length = 20
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false

[node name="Strength" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/VBoxContainer" instance=ExtResource("2_i0jnm")]
layout_mode = 2
Stat_Color = Color(1, 0, 0, 1)

[node name="Endurance" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/VBoxContainer" instance=ExtResource("2_i0jnm")]
layout_mode = 2
Stat_Type = 1
Stat_Color = Color(0, 1, 0, 1)

[node name="Intelligence" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/VBoxContainer" instance=ExtResource("2_i0jnm")]
layout_mode = 2
Stat_Type = 2
Stat_Color = Color(0, 0, 1, 1)

[node name="Points Remaining" type="Label" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "(#) points remaining"
horizontal_alignment = 1

[node name="Warrior" type="VBoxContainer" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/Warrior"]
layout_mode = 2
texture = SubResource("GradientTexture2D_wlfof")

[node name="Player" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/Warrior/TextureRect" instance=ExtResource("2_5ms5j")]
position = Vector2(80, 80)

[node name="Button" type="Button" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Character Select/Warrior"]
layout_mode = 2
size_flags_horizontal = 3
text = "Warrior"

[node name="Game Options" type="HBoxContainer" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 11
alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options"]
layout_mode = 2
text = "Join"

[node name="Quit" type="Button" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options"]
layout_mode = 2
text = "Quit"

[node name="Quick Play" type="Button" parent="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options"]
layout_mode = 2
text = "Quick Play"

[node name="Players" type="Node2D" parent="." groups=["PlayerSpawn"]]

[connection signal="pressed" from="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Multiplayer/MarginContainer/VBoxContainer/Game Options/Quick Play" to="." method="_on_quick_play_pressed"]
